objects/TT_Admin_Credentials__mdt/TT_Admin_Credentials__mdt.object-meta.xml
<CustomObject>
    <label>TT_Admin_Credential</label>
    <pluralLabel>TT_Admin_Credentials</pluralLabel>
</CustomObject>