objects/TT_Admin_Credentials__mdt/fields/Access_Token_Expiration_Time__c.field-meta.xml
<CustomField>
    <fullName>Access_Token_Expiration_Time__c</fullName>
    <label>Access Token Expiration Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>