objects/TT_Admin_Credentials__mdt/fields/Authentication_URL__c.field-meta.xml
<CustomField>
    <fullName>Authentication_URL__c</fullName>
    <label>Authentication URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>