objects/TT_Admin_Credentials__mdt/fields/Auto_Schedule_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Auto_Schedule_Jobs__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto Schedule Jobs?</label>
    <type>Checkbox</type>
</CustomField>