objects/TT_Admin_Credentials__mdt/fields/BatchRunsForSFToTTOnTimeBasis__c.field-meta.xml
<CustomField>
    <fullName>BatchRunsForSFToTTOnTimeBasis__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Data sync from SF to TT on a time basis</description>
    <inlineHelpText>Data sync from SF to TT on a time basis</inlineHelpText>
    <label>BatchRunsForSFToTTOnTimeBasis</label>
    <type>Checkbox</type>
</CustomField>