objects/TT_Admin_Credentials__mdt/fields/ConfigPageVisible__c.field-meta.xml
<CustomField>
    <fullName>ConfigPageVisible__c</fullName>
    <label>ConfigPageVisible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>