objects/TT_Admin_Credentials__mdt/fields/ForSecondTimeBatch__c.field-meta.xml
<CustomField>
    <fullName>ForSecondTimeBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ForSecondTimeBatch</label>
    <type>Checkbox</type>
</CustomField>