objects/TT_Admin_Credentials__mdt/fields/Instance_URL__c.field-meta.xml
<CustomField>
    <fullName>Instance_URL__c</fullName>
    <label>Instance URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>