objects/TT_Admin_Credentials__mdt/fields/NotSyncTaskIfHaving__c.field-meta.xml
<CustomField>
    <fullName>NotSyncTaskIfHaving__c</fullName>
    <description>The task will not sync if the Subject haveing the value Email.</description>
    <label>NotSyncTaskIfHaving</label>
    <length>255</length>
    <type>Text</type>
</CustomField>