objects/TT_Admin_Credentials__mdt/fields/Refresh_Token_Expiration_If_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token_Expiration_If_Inactive__c</fullName>
    <description>This field stores the number of days it will take a refresh token to expire if it is not used.</description>
    <label>Refresh Token Expiration If Inactive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>