objects/TT_Admin_Credentials__mdt/fields/Refresh_Token_Last_Used_Date__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token_Last_Used_Date__c</fullName>
    <label>Refresh Token Last Used Date</label>
    <type>DateTime</type>
</CustomField>