objects/TT_Admin_Credentials__mdt/fields/Registration_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Registration_DateTime__c</fullName>
    <label>Registration DateTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>