objects/TT_Admin_Credentials__mdt/fields/Registration_Request_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Registration_Request_Expiry__c</fullName>
    <label>Registration Request Expiry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>