objects/TT_Admin_Credentials__mdt/fields/Registration_Successful__c.field-meta.xml
<CustomField>
    <fullName>Registration_Successful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registration Successful?</label>
    <type>Checkbox</type>
</CustomField>