objects/TT_Admin_Credentials__mdt/fields/RestrictedTTFieldMapping__c.field-meta.xml
<CustomField>
    <fullName>RestrictedTTFieldMapping__c</fullName>
    <description>This filed will hold API of custom fields of contact, lead and task which we want to restrict.</description>
    <label>RestrictedTTFieldMapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>