objects/TT_Admin_Credentials__mdt/fields/Use_CreatedById__c.field-meta.xml
<CustomField>
    <fullName>Use_CreatedById__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use CreatedById?</label>
    <type>Checkbox</type>
</CustomField>